--- a/eMotoCellSimulator/eMotoCellSimulator.csproj
+++ b/eMotoCellSimulator/eMotoCellSimulator.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="eMotoCell.cs" />
     <Compile Include="eMotoPacket.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -76,7 +77,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
